--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
         "typescript-eslint": "^8.20.0",
         "vite": "^6.0.0",
         "vitest": "^3.0.0"
+    },
+    "dependencies": {
+        "@mkody/twitch-emoticons": "^2.9.0"
     }
 }
